# TripPilot-AI

./: .gitignore  CLAUDE.md  FRONTEND_PLAN.md  PROGRESS.md  PROJECT_PLAN.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: checkpointer.py  graph.py  state.py  streaming.py  validation.py
backend/app/agents/nodes/: __init__.py  conversation_manager.py  intake.py  planner.py  refiner.py  researcher.py  synthesizer.py  validator.py
backend/app/agents/prompts/: __init__.py  conversation_manager.py  intake.py  planner.py  refiner.py  synthesizer.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  health.py  trips.py
backend/app/core/: google_oauth.py  llm.py  openai_client.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/mcp/: client_pool.py  config.py  currency.py  directions.py  places.py  weather.py
backend/app/models/: __init__.py  conversation.py  message.py  trip.py  user.py
backend/app/repositories/: __init__.py  conversation_repository.py  trip_repository.py  user_repository.py
backend/app/schemas/: auth.py  itinerary.py  planning.py  trip.py  trip_api.py
backend/app/services/: __init__.py  pdf.py
backend/mcp_servers/: __init__.py
backend/mcp_servers/currency/: __main__.py  frankfurter.py  schemas.py  server.py
backend/mcp_servers/directions/: __main__.py  google_directions.py  schemas.py  server.py
backend/mcp_servers/places/: __main__.py  google_places.py  schemas.py  server.py
backend/mcp_servers/weather/: Dockerfile  __main__.py  openweather.py  schemas.py  server.py
backend/tests/: conftest.py  test_auth.py  test_chat_persistence.py  test_chat_ws.py  test_chat_ws_auth.py  test_config.py  test_conversation_manager.py  test_google_auth.py  test_graph.py  test_health.py  test_intake.py  test_mcp_pool.py  test_pdf.py  test_planner.py  test_refiner.py  test_researcher.py  test_security.py  test_streaming.py  test_synthesizer.py  test_trips.py  test_validation.py
backend/tests/mcp/: test_currency_server.py  test_directions_server.py  test_frankfurter.py  test_google_directions.py  test_google_places.py  test_openweather.py  test_places_server.py  test_weather_server.py
(+38 files in other folders)
