[project]
name = "trippilot-backend"
version = "0.1.0"
description = "TripPilot AI — conversational agentic travel planner (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langgraph>=0.2",
    "langchain-mcp-adapters>=0.1",
    "fastmcp>=2.0",
    "httpx>=0.27",
    "openai>=1.40",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "email-validator>=2.1",
    "fpdf2>=2.8.7",
    "google-auth>=2.55.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "mcp_servers"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["app/db/migrations/versions/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
